<?xml version="1.0"?>
<package format="2">
  <name>localization_ui</name>
  <version>0.1.0</version>
  <description>
     localization_ui
  </description>
  <license>Apache 2.0</license>
  <maintainer email="zang09@naver.com">Hae-bum Jung</maintainer>
  <author>Hae-bum Jung</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hdl_localization</depend>

  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
</package>
